[gd_scene load_steps=27 format=2]

[ext_resource path="res://Entities/soldier/soldier.gd" type="Script" id=1]
[ext_resource path="res://Components/sleeper/sleeper.tscn" type="PackedScene" id=2]
[ext_resource path="res://Components/entity_push/entity_push.tscn" type="PackedScene" id=3]
[ext_resource path="res://Components/brain/brain.tscn" type="PackedScene" id=4]
[ext_resource path="res://Components/health_bar/health_bar.tscn" type="PackedScene" id=5]
[ext_resource path="res://Components/sprite/entity_sprite.tscn" type="PackedScene" id=6]
[ext_resource path="res://Components/stats/stats.tscn" type="PackedScene" id=7]
[ext_resource path="res://Components/hurtbox/hurtbox.tscn" type="PackedScene" id=8]
[ext_resource path="res://Components/brain/movement_lobe/spring/spring.tscn" type="PackedScene" id=9]
[ext_resource path="res://Components/brain/movement_lobe/movement_lobe.tscn" type="PackedScene" id=10]
[ext_resource path="res://Components/brain/action_lobe/action_lobe.tscn" type="PackedScene" id=11]
[ext_resource path="res://Components/brain/action_lobe/action/action.tscn" type="PackedScene" id=12]
[ext_resource path="res://Components/brain/memory_lobe/memory_lobe.tscn" type="PackedScene" id=13]
[ext_resource path="res://Effects/entity_effects/entity_effects.tscn" type="PackedScene" id=14]
[ext_resource path="res://Components/sound_player/foot_stepper/foot_stepper.tscn" type="PackedScene" id=15]
[ext_resource path="res://Entities/Item_Pickups/assault_rifle/assault_rifle.png" type="Texture" id=16]
[ext_resource path="res://Components/held_item/held_item.tscn" type="PackedScene" id=17]
[ext_resource path="res://Entities/soldier/soldier_back.png" type="Texture" id=18]
[ext_resource path="res://Entities/soldier/soldier.png" type="Texture" id=19]
[ext_resource path="res://Components/spawner/spawner.tscn" type="PackedScene" id=20]
[ext_resource path="res://Effects/muzzle_flash/muzzle_flash.tscn" type="PackedScene" id=21]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true

[sub_resource type="CircleShape2D" id=2]
radius = 9.04555

[sub_resource type="CircleShape2D" id=3]
radius = 5.97424

[sub_resource type="Animation" id=4]
resource_name = "stand"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("entity_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk"
length = 0.7
loop = true
step = 0.175
tracks/0/type = "value"
tracks/0/path = NodePath("entity_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.175, 0.35, 0.525 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="soldier" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )
truName = "soldier"
faction = "army"
warnings = 1
shoot_cooldown = 0.11

[node name="stats" parent="." instance=ExtResource( 7 )]
MAX_HEALTH = 5
HEALTH = 5
DEFENCE = 1
DAMAGE = 2
TRUE_DAMAGE = 1

[node name="entity_sprite" parent="." instance=ExtResource( 6 )]
material = SubResource( 1 )
texture = ExtResource( 19 )
hframes = 4
back_texture = ExtResource( 18 )

[node name="entity_push" parent="." instance=ExtResource( 3 )]
visible = false

[node name="CollisionShape2D" parent="entity_push" index="0"]
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 3 )

[node name="hurtbox" parent="." instance=ExtResource( 8 )]
visible = false

[node name="CollisionShape2D" parent="hurtbox" index="0"]
shape = SubResource( 2 )

[node name="sleeper" parent="." instance=ExtResource( 2 )]

[node name="health_bar" parent="." instance=ExtResource( 5 )]
margin_left = -10.1577
margin_top = -13.5767
margin_right = 10.8423
margin_bottom = -9.57493

[node name="brain" parent="." instance=ExtResource( 4 )]

[node name="movement_lobe" parent="brain" instance=ExtResource( 10 )]
general_springs = {
"friendly": "",
"hostile": "spring",
"neutral": ""
}

[node name="spring" parent="brain/movement_lobe" instance=ExtResource( 9 )]
DISTANCE = 60

[node name="memory_lobe" parent="brain" instance=ExtResource( 13 )]
MEMORY_TIME = 7.0

[node name="action_lobe" parent="brain" instance=ExtResource( 11 )]
PATIENCE = 0.2
ACTION_WEIGHTING = 0.0
ACTION_DEWEIGHTING = 0.0

[node name="shoot" parent="brain/action_lobe" instance=ExtResource( 12 )]
best_distance = 60
COOLDOWN = 0.25

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/stand = SubResource( 4 )
anims/walk = SubResource( 5 )

[node name="foot_stepper" parent="." instance=ExtResource( 15 )]

[node name="entity_effects" parent="." instance=ExtResource( 14 )]
death_type = 7

[node name="held_item" parent="." instance=ExtResource( 17 )]
TARGETING = 1

[node name="sprite" parent="held_item/anchor" index="0"]
texture = ExtResource( 16 )
hframes = 1

[node name="shoot_timer" type="Timer" parent="."]
wait_time = 0.11

[node name="muzzle_flash" parent="." instance=ExtResource( 20 )]
standby_mode = true
thing = ExtResource( 21 )
spawn_on_free = false
rotation_mode = 2
effect_inherit_flipping = false
custom_properties = {
}

[connection signal="lost_target" from="brain" to="." method="_on_brain_lost_target"]
[connection signal="action" from="brain/action_lobe" to="." method="_on_action_lobe_action"]
[connection signal="animation_finished" from="held_item/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="shoot_timer" to="." method="_on_shoot_timer_timeout"]

[editable path="entity_push"]
[editable path="hurtbox"]
[editable path="held_item"]
